--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     rel="stylesheet">
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140071942-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X1NGD9GXX5"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'UA-140071942-1');
+    gtag('config', 'G-X1NGD9GXX5');
   </script>
 </head>
 
