update menu, add pdf page, add robot.txt, add meta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Meta Description -->
+    <meta name="description" content="Anas Abdur Rohim - Web Developer with 5+ years of experience. Pengembang Web dengan pengalaman lebih dari 5 tahun dalam pembuatan dan pemeliharaan aplikasi web.">
+
+    <!-- Optional additional meta -->
+    <meta name="author" content="Anas Abdur Rohim">
+    <meta name="keywords" content="Web Developer, Full Stack, Laravel, React, Vue, Anas Abdur Rohim, Programmer Indonesia, Developer Jakarta">
+    <meta name="language" content="id,en">
+    <meta name="robots" content="index, follow">
+
   <title>Anas Abdur</title>
+
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto+Slab:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
